box shadow fix on small devices

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -29,30 +29,52 @@
 }
 
 /**
-*/
-@mixin shadowed-block($backgroundColor: #fff, $height: 100px, $shadowHeight: 4px) {
+ * Shadow block (fade)
+ */
+@mixin shadowed-block($backgroundColor: #fff, $height: 100px, $shadowHeight: 2px) {
   position:         relative;
   background-color: $backgroundColor;
   height:           $height;
-  border-bottom:    1px solid white !important;
+
+  &:before {
+    display:          block;
+    background-color: $backgroundColor;
+    position:         relative;
+    margin:           0 auto;
+    top:              0;
+    left:             0;
+    width:            70%;
+    height:           $shadowHeight;
+    content:          '';
+    z-index:          9999;
+    background:       -moz-linear-gradient(left, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 1) 100%);
+    background:       -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(255, 255, 255, 1)), color-stop(50%, rgba(255, 255, 255, 1)), color-stop(100%, rgba(255, 255, 255, 1)));
+    background:       -webkit-linear-gradient(left, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 1) 100%);
+    background:       -o-linear-gradient(left, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 1) 100%);
+    background:       -ms-linear-gradient(left, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 1) 100%);
+    background:       linear-gradient(to right, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 1) 100%);
+    filter:           progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ffffff', GradientType=1);
+  }
 
   &:after {
     display:          block;
     background-color: $backgroundColor;
     position:         relative;
     margin:           0 auto;
-    bottom:           0;
+    top:              $shadowHeight;
     left:             0;
     width:            70%;
     height:           $shadowHeight;
     content:          '';
-    background:       -moz-linear-gradient(left, rgba(255, 255, 255, 1) 0%, rgba(226, 226, 226, 1) 50%, rgba(255, 255, 255, 1) 100%);
-    background:       -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(255, 255, 255, 1)), color-stop(50%, rgba(226, 226, 226, 1)), color-stop(100%, rgba(255, 255, 255, 1)));
-    background:       -webkit-linear-gradient(left, rgba(255, 255, 255, 1) 0%, rgba(226, 226, 226, 1) 50%, rgba(255, 255, 255, 1) 100%);
-    background:       -o-linear-gradient(left, rgba(255, 255, 255, 1) 0%, rgba(226, 226, 226, 1) 50%, rgba(255, 255, 255, 1) 100%);
-    background:       -ms-linear-gradient(left, rgba(255, 255, 255, 1) 0%, rgba(226, 226, 226, 1) 50%, rgba(255, 255, 255, 1) 100%);
+    background:       -moz-linear-gradient(left, rgba(255, 255, 255, 1) 0%, rgba(200, 200, 200, 1) 50%, rgba(255, 255, 255, 1) 100%);
+    background:       -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(255, 255, 255, 1)), color-stop(50%, rgba(200, 200, 200, 1)), color-stop(100%, rgba(255, 255, 255, 1)));
+    background:       -webkit-linear-gradient(left, rgba(255, 255, 255, 1) 0%, rgba(200, 200, 200, 1) 50%, rgba(255, 255, 255, 1) 100%);
+    background:       -o-linear-gradient(left, rgba(255, 255, 255, 1) 0%, rgba(200, 200, 200, 1) 50%, rgba(255, 255, 255, 1) 100%);
+    background:       -ms-linear-gradient(left, rgba(255, 255, 255, 1) 0%, rgba(200, 200, 200, 1) 50%, rgba(255, 255, 255, 1) 100%);
     background:       linear-gradient(to right, rgba(255, 255, 255, 1) 0%, rgba(200, 200, 200, 1) 50%, rgba(255, 255, 255, 1) 100%);
     filter:           progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ffffff', GradientType=1);
+
+    @include filter(blur, 1px);
   }
 }
 
@@ -160,4 +182,13 @@
 
   @warn "Unknown `#{$keyName}` in $colors.";
   @return null;
+}
+
+//
+@mixin filter($filter-type,$filter-amount) {
+  -webkit-filter: $filter-type+unquote('(#{$filter-amount})');
+  -moz-filter:    $filter-type+unquote('(#{$filter-amount})');
+  -ms-filter:     $filter-type+unquote('(#{$filter-amount})');
+  -o-filter:      $filter-type+unquote('(#{$filter-amount})');
+  filter:         $filter-type+unquote('(#{$filter-amount})');
 }
